    - git_commit() now accepts $msg instead of $version as first param
    - All Git commands now print the exit code in the error message
    - Add build, dist and install commands to binary
    - Replace t/manifest.t with updated code to work properly with custom entries
    - Rework all tests that match dates... the changeover from 2020 to 2021
      exposed comparison issues

1.00    2020-12-30
    - Fix issue where ABSTRACT was being pulled from one of the test
      modules. We now pull it from the proper POD file (fixes #4)
    - t/20-ci_config_files.t no longer overwrites this distribution's
      production CI config file (fixes #3)
    - Commented out package statement in test module template so it doesn't
      get indexed on the CPAN (fixes #7)
    - Renamed all instances of Acme::STEVEB and Acme-STEVEB with
      Acme-STEVEB and Acme-STEVEB
    - We now send in all of the proper variables to the module template
      (fixes #11)
    - Renamed _makefile_load() and _module_load() to _makefile_tie() and
      _module_tie(), which are by far more appropriate names
    - CI config now installs ExtUtils::MakeMaker to a recent version,
      fixing an issue where prereqs weren't being installed (fixes #9)
    - Remove container from CI config, as containers only work on ubuntu
      (fixes #10)
    - Updated CI template, enabled ubuntu-latest, windows-latest and
      macos-latest, with coveralls.io support (closes #12)
    - 100% test coverage
    - Added move_distribution_files()
    - Finished t/50-full_run.t, goes through every function to create an
      entire distribution with all customizations in place. Can be used as a
      roadmap for a binary script
    - We now croak() if the new version sent into version_bump() is less
      than or equal to the current version (closes #14)
    - Add tests that compare a full run against a saved template
      distribution (closes #17)
    - Renamed distribution to Dist::Mgr and repo to dist-mgr (closes #18)