@@ -9,6 +9,8 @@ Revision history for Dist-Mgr
     - Replace t/manifest.t with updated code to work properly with custom entries
     - Rework all tests that match dates... the changeover from 2020 to 2021
       exposed comparison issues
+    - Prevent the addition of multiple repository and bugtracker sections from
+      being added to Makefile.PL (fixes #23; fixes #24)
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
